
[package]
name = "brutemoji"
version = "0.4.0"
authors = ["Tom Pridham <pridham.tom@gmail.com>"]
edition = "2018"
description = "Recreate pictures with emoji by bruteforce"
homepage = "https://tompridham.me"
readme = "README.md"
keywords = ["emoji", "picture", "image", "bruteforce", "idiotic"]
license = "MIT"

[dependencies]
image = {version="0.23.8", default-features = false, features = ["gif", "jpeg", "png", "webp"]}
rand = "0.7.3"
ndarray = "0.13.1"
