[package]
name = "brutemoji"
version = "0.6.0"
authors = ["Tom Pridham <pridham.tom@gmail.com>"]
edition = "2018"
description = "Recreate pictures with emoji by bruteforce"
homepage = "https://tompridham.me"
readme = "README.md"
keywords = ["emoji", "picture", "image", "bruteforce", "idiotic"]
license = "MIT"

[dependencies]
image = { version = "0.23.14", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
rand = "0.8.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "image_generation"
harness = false
