[package]
name = "brutemoji"
version = "0.7.0"
authors = ["Tom Pridham <pridham.tom@gmail.com>"]
edition = "2018"
description = "Recreate pictures with emoji by bruteforce"
homepage = "https://tompridham.me"
readme = "README.md"
keywords = ["emoji", "picture", "image", "bruteforce", "idiotic"]
license = "MIT"

[dependencies]
fastrand = "1.4.0"
image = { version = "0.23.14", default-features = false, features = ["gif", "jpeg", "png", "webp"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "image_generation"
harness = false
